# synchroniser

./: README.md  pyproject.toml  todo.txt
logs/: logs.txt
src/: argparser.py  copythreader.py  logger.py  logging_config.json  main.py  syncer.py  syncer_test.py  test_argparser.py  test_logger.py
src/synchroniser/: __main__.py  purger.py  syncer.py
tests/: syncer_test.py  test_argparser.py  test_logger.py
